--- a/musicstream/package.json
+++ b/musicstream/package.json
@@ -10,15 +10,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "generate-random-string": "^1.0.2",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-spotify-web-playback": "^0.10.0",
     "request": "^2.88.2",
     "spotify-web-api-node": "^4.0.0",
     "superagent": "^8.0.3",
