--- a/musicstream/package.json
+++ b/musicstream/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "format-duration": "^2.0.0",
     "generate-random-string": "^1.0.2",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
