--- a/musicstream/package.json
+++ b/musicstream/package.json
@@ -14,9 +14,12 @@
     "bootstrap": "^5.2.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dominant-color": "^0.0.1",
     "express": "^4.18.2",
+    "fast-average-color": "^9.1.1",
     "format-duration": "^2.0.0",
     "generate-random-string": "^1.0.2",
+    "imagemagick": "^0.1.3",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
