--- a/musicstream/package.json
+++ b/musicstream/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-spotify-web-playback": "^0.10.0",
+    "redux": "^4.2.0",
     "request": "^2.88.2",
     "spotify-web-api-node": "^4.0.0",
     "superagent": "^8.0.3",
