--- a/musicstream_Server/package.json
+++ b/musicstream_Server/package.json
@@ -15,7 +15,8 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "spotify-web-api-node": "^5.0.2"
+    "spotify-web-api-node": "^5.0.2",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
